# streamdsp

./: .gitignore  CMakeLists.txt  README.md
common/: timer.hpp  types.hpp
lab01_raii/: CMakeLists.txt  RESULTS.md  buffer.hpp  file.hpp  owned_buffer.hpp  resource_exception.hpp  test_buffer.cpp  test_file.cpp  test_owned_buffer.cpp  test_owned_file.cpp
lab02_ring_buffer/: CMakeLists.txt  RESULTS.md  ring_buffer.hpp  test_break_ordering.cpp  test_ring_buffer.cpp  test_spsc_stress.cpp
lab03_pipeline/: CMakeLists.txt  RESULTS.md  test_pipeline.cpp  test_stages.cpp
lab03_pipeline/include/: pipeline_builder.hpp  processing_stage.hpp  stage_config.hpp  stage_factory.hpp
lab03_pipeline/src/: fft_stage.cpp  magnitude_stage.cpp  pipeline_builder.cpp  stage_factory.cpp  window_stage.cpp
lab04_executor/: CMakeLists.txt  RESULTS.md  test_batch_executor.cpp  test_streaming_executor.cpp
lab04_executor/include/: batch_executor.hpp  event.hpp  streaming_executor.hpp
lab04_executor/src/: batch_executor.cpp  streaming_executor.cpp
